# music-visualizer

./: .gitignore  Cargo.toml  README.md
example/: central  dan_flash_remake  many_circles  script
src/: common.rs  expression.rs  main.rs  mapper.rs  module_map.rs
src/audio/: mod.rs  mp3.rs  wav.rs
src/graphics/: backgrounds.rs  common.rs  geom_visuals.rs  mod.rs
src/parser/: functions.rs  keywords.rs  match_keywords.rs  match_visualizer.rs  mod.rs  visualizers.rs
src/script/: mod.rs
