[package]
name = "audisuals"
version = "0.1.3"
authors = ["t-dasloc", "coopersimon"]

[dependencies]
simplemad = "0.8.1"
hound = "3.1.0"
piston = "0.31.3"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = { git = "https://github.com/danslocombe/opengl_graphics" }
rand = "0.3"
cgmath = "0.12"
nom = "^3.2"
notify = "4.0.0"
rodio = "0.5.2"
